--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
                         <div>
                             <div class="profile__text-info">
                                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                                <button class="profile__edit-button"></button>
+                                <button class="profile__edit-button" type="button"></button>
                             </div>
                             <p class="profile__about">Исследователь океана</p>
                         </div>
                     </div>
-                    <button class="profile__add-button"></button>
+                    <button class="profile__add-button" type="button"></button>
                 </section>
                 <section class="elements">
                     <div class="element">
                         <img src="images/karachaevo.png" alt="Карачаево-Черкессия" class="element__photo">
                         <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                     <div class="element">
                         <img src="images/elbrus.png" alt="Эльбрус" class="element__photo">
                         <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                     <div class="element">
                         <img src="images/dombay.png" alt="Домбай" class="element__photo">
                         <h2 class="element__title">Домбай</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                     <div class="element">
                         <img src="images/baikal.jpg" alt="Байкал" class="element__photo">
                         <h2 class="element__title">Байкал</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                     <div class="element">
                         <img src="images/teriberka.jpg" alt="Териберка" class="element__photo">
                         <h2 class="element__title">Териберка</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                     <div class="element">
                         <img src="images/altay.jpg" alt="Алтай" class="element__photo">
                         <h2 class="element__title">Алтай</h2>
-                        <button class="element__button"></button>
+                        <button class="element__button" type="button"></button>
                     </div>
                 </section>
             </main>
@@ -65,11 +65,11 @@
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
                     <form class="popup__form" name="editForm">
-                        <input type="text" placeholder="Жак-Ив Кусто" name="userName" class="popup__text popup__text_type_name">
-                        <input type="text" placeholder="Исследователь океана" name="userAbout" class="popup__text popup__text_type_about">
+                        <input type="text" placeholder="Жак-Ив Кусто" name="user-name" class="popup__text popup__text_type_name">
+                        <input type="text" placeholder="Исследователь океана" name="user-about" class="popup__text popup__text_type_about">
                         <input type="submit" value="Сохранить" name="save" class="popup__submit-button">
                     </form>
-                    <button class="popup__close-button"></button>
+                    <button class="popup__close-button" type="button"></button>
                 </div>
             </section>
         </div>
