--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <section class="popup">
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <form class="popup__form" name="editForm">
+                    <form class="popup__form" name="edit-form">
                         <input type="text" placeholder="Жак-Ив Кусто" name="user-name" class="popup__text popup__text_type_name">
                         <input type="text" placeholder="Исследователь океана" name="user-about" class="popup__text popup__text_type_about">
                         <input type="submit" value="Сохранить" name="save" class="popup__submit-button">
