--- a/index.html
+++ b/index.html
@@ -26,53 +26,51 @@
                     <button class="profile__add-button" type="button"></button>
                 </section>
                 <section class="elements">
-                    <div class="element">
-                        <img src="images/karachaevo.png" alt="Карачаево-Черкессия" class="element__photo">
-                        <h2 class="element__title">Карачаево-Черкессия</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                    <div class="element">
-                        <img src="images/elbrus.png" alt="Эльбрус" class="element__photo">
-                        <h2 class="element__title">Гора Эльбрус</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                    <div class="element">
-                        <img src="images/dombay.png" alt="Домбай" class="element__photo">
-                        <h2 class="element__title">Домбай</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                    <div class="element">
-                        <img src="images/baikal.jpg" alt="Байкал" class="element__photo">
-                        <h2 class="element__title">Байкал</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                    <div class="element">
-                        <img src="images/teriberka.jpg" alt="Териберка" class="element__photo">
-                        <h2 class="element__title">Териберка</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
-                    <div class="element">
-                        <img src="images/altay.jpg" alt="Алтай" class="element__photo">
-                        <h2 class="element__title">Алтай</h2>
-                        <button class="element__button" type="button"></button>
-                    </div>
+                    
                 </section>
             </main>
             <footer class="footer">
                 <p class="footer__copyright">&copy; 2020. Алия Троицкая</p>
             </footer>
-            <section class="popup">
+            <section class="popup popup_type_edit">
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <form class="popup__form" name="edit-form">
+                    <form class="popup__form popup__form_type_edit" name="edit-form">
                         <input type="text" placeholder="Жак-Ив Кусто" name="user-name" class="popup__text popup__text_type_name">
                         <input type="text" placeholder="Исследователь океана" name="user-about" class="popup__text popup__text_type_about">
                         <input type="submit" value="Сохранить" name="save" class="popup__submit-button">
                     </form>
-                    <button class="popup__close-button" type="button"></button>
+                    <button class="popup__close-button popup__close-button_type_edit" type="button"></button>
+                </div>
+            </section>
+            <section class="popup popup_type_add">
+                <div class="popup__container">
+                    <h3 class="popup__title">Новое место</h3>
+                    <form class="popup__form popup__form_type_add" name="add-form">
+                        <input type="text" placeholder="Название" name="place-title" class="popup__text popup__text_type_title">
+                        <input type="text" placeholder="Ссылка на картинку" name="place-link" class="popup__text popup__text_type_link">
+                        <input type="submit" value="Создать" name="save" class="popup__submit-button">
+                    </form>
+                    <button class="popup__close-button popup__close-button_type_add" type="button"></button>
+                </div>
+            </section>
+            <section class="popup popup_type_image">
+                <div class="popup__image-box">
+                    <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/chelyabinsk-oblast.jpg" alt="изображение" class="popup__image">
+                    <h2 class="popup__image-title">Челябинская область</h2>
+                    <button class="popup__close-button popup__close-button_type_image" type="button"></button>
                 </div>
             </section>
         </div>
+        <template id="element-template">
+            <div class="element">
+                <img src="" alt="картинка местности" class="element__photo">
+                <h2 class="element__title"> </h2>
+                <button class="element__button" type="button"></button>
+                <button class="element__button-trash" type="button"></button>
+            </div>
+        </template>
+        
         <script src="scripts/index.js"></script>
     </body>
 </html>
