--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <template id="element-template">
             <div class="element">
-                <img src="" alt="картинка местности" class="element__photo">
+                <img src="#" alt="картинка местности" class="element__photo">
                 <h2 class="element__title"> </h2>
                 <button class="element__button" type="button"></button>
                 <button class="element__button-trash" type="button"></button>
