second checked 5sprint

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
                     <form class="popup__form popup__form_type_edit" name="edit-form">
-                        <input type="text" placeholder="Жак-Ив Кусто" name="user-name" class="popup__text popup__text_type_name">
-                        <input type="text" placeholder="Исследователь океана" name="user-about" class="popup__text popup__text_type_about">
+                        <input type="text" placeholder="Введите имя" name="user-name" class="popup__text popup__text_type_name">
+                        <input type="text" placeholder="Введите профессию" name="user-about" class="popup__text popup__text_type_about">
                         <input type="submit" value="Сохранить" name="save" class="popup__submit-button">
                     </form>
                     <button class="popup__close-button popup__close-button_type_edit" type="button"></button>
