--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
             <section class="popup popup_type_edit">
                 <div class="popup__container">
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <form class="popup__form popup__form_type_edit" name="edit-form">
-                        <input type="text" placeholder="Введите имя" name="user-name" class="popup__text popup__text_type_name">
-                        <input type="text" placeholder="Введите профессию" name="user-about" class="popup__text popup__text_type_about">
-                        <input type="submit" value="Сохранить" name="save" class="popup__submit-button">
+                    <form class="popup__form popup__form_type_edit" name="edit-form" novalidate>
+                        <label class="popup__form-field">
+                            <input id="name-input" type="text" placeholder="Введите имя" name="user-name" class="popup__text popup__text_type_name" required minlength="2" maxlength="40">
+                            <span class="name-input-error popup__text-error"></span>
+                        </label>
+                        <label class="popup__form-field">
+                            <input id="user-about-input" type="text" placeholder="Введите профессию" name="user-about" class="popup__text popup__text_type_about" required minlength="2" maxlength="200">
+                            <span class="user-about-input-error popup__text-error"></span>
+                        </label>
+                        <button type="submit" value="Сохранить" name="save" class="popup__submit-button">Сохранить</button>
                     </form>
                     <button class="popup__close-button popup__close-button_type_edit" type="button"></button>
                 </div>
@@ -46,10 +52,16 @@
             <section class="popup popup_type_add">
                 <div class="popup__container">
                     <h3 class="popup__title">Новое место</h3>
-                    <form class="popup__form popup__form_type_add" name="add-form">
-                        <input type="text" placeholder="Название" name="place-title" class="popup__text popup__text_type_title">
-                        <input type="text" placeholder="Ссылка на картинку" name="place-link" class="popup__text popup__text_type_link">
-                        <input type="submit" value="Создать" name="save" class="popup__submit-button">
+                    <form class="popup__form popup__form_type_add" name="add-form" novalidate>
+                        <label class="popup__form-field">
+                            <input id="place-title-input" type="text" placeholder="Название" name="place-title" class="popup__text popup__text_type_title" required minlength="2" maxlength="30">
+                            <span class="place-title-input-error popup__text-error"></span>
+                        </label>
+                        <label class="popup__form-field">
+                            <input id="place-link-input" type="url" placeholder="Ссылка на картинку" name="place-link" class="popup__text popup__text_type_link" required>
+                            <span class="place-link-input-error popup__text-error"></span>
+                        </label>
+                        <button type="submit" value="Создать" name="save" class="popup__submit-button">Создать</button>
                     </form>
                     <button class="popup__close-button popup__close-button_type_add" type="button"></button>
                 </div>
@@ -70,7 +82,7 @@
                 <button class="element__button-trash" type="button"></button>
             </div>
         </template>
-        
+        <script src="scripts/validate.js"></script>
         <script src="scripts/index.js"></script>
     </body>
 </html>
