--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
             </section>
         </div>
-        <template id="element-template">
+        <template class="element-template card-template_type_photo">
             <div class="element">
                 <img src="#" alt="картинка местности" class="element__photo">
                 <h2 class="element__title"> </h2>
@@ -82,7 +82,8 @@
                 <button class="element__button-trash" type="button"></button>
             </div>
         </template>
-        <script src="scripts/validate.js"></script>
-        <script src="scripts/index.js"></script>
+        <script type="module" src="scripts/index.js"></script>
+        <script type="module" src="scripts/Card.js"></script>
+        <script type="module" src="scripts/FormValidator.js"></script>
     </body>
 </html>
