first checked 8 work

--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,18 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="pages/index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mesto</title>
     </head>
     <body>
         <div class="page">
             <header class="header">
-                <img src="images/logotype.svg" alt="Логотип" class="header__logo">
+                <img src="../images/logotype.svg" alt="Логотип" class="header__logo">
             </header>
             <main class="content">
                 <section class="profile">
                     <div class="profile__info">
-                        <img src="images/Avatar.png" alt="Аватарка" class="avatar">
+                        <img src="../images/Avatar.png" alt="Аватарка" class="avatar">
                         <div>
                             <div class="profile__text-info">
                                 <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -82,9 +81,5 @@
                 <button class="element__button-trash" type="button"></button>
             </div>
         </template>
-        <script type="module" src="scripts/index.js"></script>
-        <script type="module" src="scripts/constants.js"></script>
-        <script type="module" src="scripts/Card.js"></script>
-        <script type="module" src="scripts/FormValidator.js"></script>
     </body>
 </html>
