--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,11 @@
                     <h3 class="popup__title">Редактировать профиль</h3>
                     <form class="popup__form popup__form_type_edit" name="edit-form" novalidate>
                         <label class="popup__form-field">
-                            <input id="name-input" type="text" placeholder="Введите имя" name="user-name" class="popup__text popup__text_type_name" required minlength="2" maxlength="40">
+                            <input id="name-input" type="text" placeholder="Введите имя" name="name" class="popup__text popup__text_type_name" required minlength="2" maxlength="40">
                             <span class="name-input-error popup__text-error"></span>
                         </label>
                         <label class="popup__form-field">
-                            <input id="user-about-input" type="text" placeholder="Введите профессию" name="user-about" class="popup__text popup__text_type_about" required minlength="2" maxlength="200">
+                            <input id="user-about-input" type="text" placeholder="Введите профессию" name="about" class="popup__text popup__text_type_about" required minlength="2" maxlength="200">
                             <span class="user-about-input-error popup__text-error"></span>
                         </label>
                         <button type="submit" value="Сохранить" name="save" class="popup__submit-button">Сохранить</button>
@@ -53,11 +53,11 @@
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form_type_add" name="add-form" novalidate>
                         <label class="popup__form-field">
-                            <input id="place-title-input" type="text" placeholder="Название" name="place-title" class="popup__text popup__text_type_title" required minlength="2" maxlength="30">
+                            <input id="place-title-input" type="text" placeholder="Название" name="title" class="popup__text popup__text_type_title" required minlength="2" maxlength="30">
                             <span class="place-title-input-error popup__text-error"></span>
                         </label>
                         <label class="popup__form-field">
-                            <input id="place-link-input" type="url" placeholder="Ссылка на картинку" name="place-link" class="popup__text popup__text_type_link" required>
+                            <input id="place-link-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__text popup__text_type_link" required>
                             <span class="place-link-input-error popup__text-error"></span>
                         </label>
                         <button type="submit" value="Создать" name="save" class="popup__submit-button">Создать</button>
