--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
             <main class="content">
                 <section class="profile">
                     <div class="profile__info">
-                        <img src="../images/Avatar.png" alt="Аватарка" class="avatar">
+                        <div class="profile__avatar-block">
+                            <img src="../images/Avatar.png" alt="Аватарка" class="avatar">
+                            <div class="profile__wrap-edit">
+                                <img src="../images/edit-icon.svg" alt="Редактирование" class="profile__icon">
+                            </div>
+                        </div>
                         <div>
                             <div class="profile__text-info">
                                 <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -53,7 +58,7 @@
                     <h3 class="popup__title">Новое место</h3>
                     <form class="popup__form popup__form_type_add" name="add-form" novalidate>
                         <label class="popup__form-field">
-                            <input id="place-title-input" type="text" placeholder="Название" name="title" class="popup__text popup__text_type_title" required minlength="2" maxlength="30">
+                            <input id="place-title-input" type="text" placeholder="Название" name="name" class="popup__text popup__text_type_title" required minlength="2" maxlength="30">
                             <span class="place-title-input-error popup__text-error"></span>
                         </label>
                         <label class="popup__form-field">
@@ -72,12 +77,37 @@
                     <button class="popup__close-button popup__close-button_type_image" type="button"></button>
                 </div>
             </section>
+            <section class="popup popup_type_remove-card">
+                <div class="popup__container popup__container_type_remove-card">
+                    <h3 class="popup__title">Вы уверены?</h3>
+                    <form class="popup__form">
+                        <button class="popup__confirm-button" type="submit" value="Да" name="delete">Да</button>
+                    </form>
+                    <button class="popup__close-button popup__close-button_type_remove-card" type="button"></button>
+                </div>
+            </section>
+            <section class="popup popup_type_edit-profile">
+                <div class="popup__container popup__container_type_remove-card">
+                    <h3 class="popup__title">Обновить аватар</h3>
+                    <form class="popup__form popup__form_type_edit-profile" name="add-form" novalidate>
+                        <label class="popup__form-field">
+                            <input id="place-title-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__text popup__text_type_title" required minlength="2" maxlength="200">
+                            <span class="place-title-input-error popup__text-error"></span>
+                        </label>
+                        <button type="submit" value="Сохранить" name="save" class="popup__submit-button">Сохранить</button>
+                    </form>
+                    <button class="popup__close-button popup__close-button_type_remove-card" type="button"></button>
+                </div>
+            </section>
         </div>
         <template class="element-template card-template_type_photo">
             <div class="element">
                 <img src="#" alt="картинка местности" class="element__photo">
                 <h2 class="element__title"> </h2>
-                <button class="element__button" type="button"></button>
+                <div class="element__block-likes">
+                    <button class="element__button" type="button"></button>
+                    <p class="element__like-counter">0</p>
+                </div>
                 <button class="element__button-trash" type="button"></button>
             </div>
         </template>
