first checked 9 work

--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
                     <h3 class="popup__title">Обновить аватар</h3>
                     <form class="popup__form popup__form_type_edit-profile" name="add-form" novalidate>
                         <label class="popup__form-field">
-                            <input id="place-title-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__text popup__text_type_title" required minlength="2" maxlength="200">
-                            <span class="place-title-input-error popup__text-error"></span>
+                            <input id="avatar-link-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__text popup__text_type_title" required minlength="2" maxlength="200">
+                            <span class="avatar-link-input-error popup__text-error"></span>
                         </label>
                         <button type="submit" value="Сохранить" name="save" class="popup__submit-button">Сохранить</button>
                     </form>
