second checked 9 work

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
             <section class="popup popup_type_edit-profile">
                 <div class="popup__container popup__container_type_remove-card">
                     <h3 class="popup__title">Обновить аватар</h3>
-                    <form class="popup__form popup__form_type_edit-profile" name="add-form" novalidate>
+                    <form class="popup__form popup__form_type_edit-profile" name="ava-form" novalidate>
                         <label class="popup__form-field">
                             <input id="avatar-link-input" type="url" placeholder="Ссылка на картинку" name="link" class="popup__text popup__text_type_title" required minlength="2" maxlength="200">
                             <span class="avatar-link-input-error popup__text-error"></span>
